# claude-cockpit

./: .gitignore  package-lock.json  package.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/background/: store.rs
src-tauri/src/commands/: background.rs  mod.rs  project.rs  session.rs  stats.rs  system.rs  terminal.rs  window.rs  workspace.rs
src-tauri/src/project/: store.rs
src-tauri/src/pty/: manager.rs
src-tauri/src/session/: db.rs  jsonl.rs  mod.rs  types.rs
src-tauri/src/stats/: aggregator.rs
src-tauri/src/workspace/: store.rs
src/components/layout/: Sidebar.tsx  StatusBar.tsx  ThemePicker.tsx  TitleBar.tsx  WorkspaceBar.tsx
src/components/player/: PlayerHud.tsx
src/components/project/: AddProjectModal.tsx  ProjectCard.tsx  ProjectList.tsx
src/components/session/: SessionBrowser.tsx  SessionCard.tsx  SessionFilter.tsx
src/components/shared/: ColorPicker.tsx  FolderBrowser.tsx  Modal.tsx  StatusDot.tsx
src/components/terminal/: ContextPill.tsx  RestoreModal.tsx  TerminalCanvas.tsx  TerminalCell.tsx  TerminalGrid.tsx  (+3 more)
src/hooks/: useCanvasLayout.ts  useFontSize.ts  useNotifications.ts  usePlayer.ts  useProjects.ts  useSessionContext.ts  useSessions.ts  useSounds.ts  useTerminal.ts  useTerminals.ts  useTheme.ts
src/lib/: constants.ts  ipc.ts  player.ts  restore.ts  sounds.ts  themes.ts  utils.ts
src/styles/: globals.css
src/types/: project.ts  session.ts  terminal.ts
