[package]
name = "claude-cockpit"
version = "0.1.0"
edition = "2021"

[lib]
name = "claude_cockpit_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "claude-cockpit"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
portable-pty = "0.8"
rusqlite = { version = "0.33", features = ["bundled"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
